2013-04-18  Diego Novillo  <dnovillo@google.com>

	* gimple.c (create_gimple_tmp): New.
	(get_expr_type): New.
	(build_assign): New.
	(build_type_cast): New.
	* gimple.h (enum ssa_mode): Define.
	(gimple_seq_set_location): New.
	* asan.c (build_check_stmt): Change some gimple_build_* calls
        to use build_assign and build_type_cast.

2013-04-18  Richard Biener  <rguenther@suse.de>

	* tree-vect-data-refs.c (vect_analyze_group_access): Properly
	handle negative step.  Remove redundant checks.
	(vect_create_data_ref_ptr): Avoid ICEs with non-constant steps.
	* tree-vect-stmts.c (vectorizable_load): Instead of asserting
	for negative step and grouped loads fail to vectorize.

2013-04-18  Steven Bosscher  <steven@gcc.gnu.org>

	* emit-rtl.c (reset_insn_used_flags): New function.
	(reset_all_used_flags): Use it.
	(verify_insn_sharing): New function.
	(verify_rtl_sharing): Fix verification for SEQUENCEs.

2013-04-18  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/56984
	* tree-vrp.c (register_edge_assert_for_2): For (x >> M) < N
	and (x >> M) >= N don't register any assertion if N << M is the
	minimum value.

2013-04-18  Steven Bosscher  <steven@gcc.gnu.org>

	* lower-subreg.c (resolve_simple_move): If called self-recursive,
	do not delete_insn insns that have not yet been emitted, only
	unlink them with remove_insn.
	* df-scan.c (df_insn_delete): Revert r197492.

2013-04-17  Steven Bosscher  <steven@gcc.gnu.org>

	* emit-rtl.c (link_insn_into_chain): Handle chaining of SEQUENCEs.
	* reorg.c (emit_delay_sequence): Simplify with emit-rtl API.

2013-04-17  Greta Yorsh  <Greta.Yorsh@arm.com>

	* config/arm/arm.md (movsicc_insn): Convert define_insn into
	define_insn_and_split.
	(and_scc,ior_scc,negscc): Likewise.
	(cmpsi2_addneg, subsi3_compare): Convert to named patterns.

2013-04-17  Greta Yorsh  <Greta.Yorsh@arm.com>

	* config/arm/arm.c (use_return_insn): Return 0 for targets that
	can benefit from using a sequence of LDRD instructions in epilogue